Fix mraid layout on iPhone X

--- a/src/styl/media-queries.styl
+++ b/src/styl/media-queries.styl
@@ -63,7 +63,7 @@
     }
   }
 
-  /* iPhone X */
+  /* iPhone X portrait */
   @media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
     html {
       font-size: $default-px-size * 1.25;
@@ -93,16 +93,6 @@
         .close-region {
           top: $default-size * 1.5;
         }
-      }
-
-      #mraid {
-        .close-region {
-          top: $default-size * 1.5;
-        }
-      }
-
-      #playable-mraid {
-        top: $default-size * 1.5;
       }
 
       #display-interstitial {
@@ -147,7 +137,7 @@
     }
   }
 
-  /* iPhone X */
+  /* iPhone X landscape */
   @media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
     html {
       font-size: $default-px-size * 1.25;
@@ -160,4 +150,26 @@
       }
     }
   }
+
+/* iPhone X */
+@media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
+  html {
+    #mraid,
+    #playable-mraid {
+      #mraid-iframe {
+        padding-top: constant(safe-area-inset-top);
+        padding-right: constant(safe-area-inset-right);
+        padding-bottom: constant(safe-area-inset-bottom);
+        padding-left: constant(safe-area-inset-left);
+        width: calc(100vw - constant(safe-area-inset-left) - constant(safe-area-inset-right));
+        height: calc(100vh - constant(safe-area-inset-top) - constant(safe-area-inset-bottom));
+      }
+
+      .close-region {
+        top: constant(safe-area-inset-top); // @stylint ignore;
+        right: constant(safe-area-inset-right); // @stylint ignore;
+      }
+    }
+  }
+}
 
